// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-segmented-buttons > renders defaults 1`] = `
"<div
  class="segmented-buttons"
>
  <ul>
    <li>
      <button
        aria-current="true"
        class="segmented-buttons__button"
      >
        Q1
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q2
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q3
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q4
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-segmented-buttons > renders large 1`] = `
"<div
  class="segmented-buttons"
>
  <ul>
    <li>
      <button
        aria-current="true"
        class="segmented-buttons__button"
      >
        Q1
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q2
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q3
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        Q4
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-segmented-buttons > renders with menu items 1`] = `
"<div
  class="segmented-buttons"
>
  <ul>
    <li>
      <button
        aria-current="true"
        class="segmented-buttons__button"
      >
        <span
          class="segmented-buttons__button-cell"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-0"
              viewBox="0 0 24 24"
            >
              <path
                d="M22 3H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h20a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1Zm-1 12H3V5h18v10ZM2 19h20a1 1 0 0 1 0 2H2a1 1 0 0 1 0-2Z"
              />
            </symbol>
            <use
              href="#icon-full-view-24"
            />
          </svg>
          <span>
            Desktop
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="segmented-buttons__button"
      >
        <span
          class="segmented-buttons__button-cell"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.154 1.004A3 3 0 0 1 19 4v16a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3V4a3 3 0 0 1 3-3h8l.154.004ZM8 3a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-.898-.995L16 3H8Zm5 15a1 1 0 1 1 0 2h-2a1 1 0 1 1 0-2h2Z"
              />
            </symbol>
            <use
              href="#icon-mobile-24"
            />
          </svg>
          <span>
            Mobile
          </span>
        </span>
      </button>
    </li>
  </ul>
</div>"
`;
